--- a/src/assets/editor.html
+++ b/src/assets/editor.html
@@ -1,9 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>Elicast Editor</title>
   </head>
   <body>
-    <div id="editor">
-    </div>
+    <div id="editor_main"></div>
   </body>
 </html>
